--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,27 @@ body
 	font-weight: 400;
 }
 
+/* Works on Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: white grey;
+}
+
+/* Works on Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 12px;
+}
+
+*::-webkit-scrollbar-track {
+  background: white;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: white;
+  border-radius: 20px;
+  border: 3px solid grey;
+}
+
 /* start all section */
 #home,
 #home .fp-slide,
